Removed Geoserver and replaced it with Titiler.

--- a/envcfg/dev-deploy/uasdm/app.properties
+++ b/envcfg/dev-deploy/uasdm/app.properties
@@ -5,6 +5,7 @@ chunk.expire.time=1
 s3.accessKey=changeit
 s3.secretKey=changeit
 bucket.name=osmre-uas-dev-deploy
+bucket.public.name=osmre-uas-dev-deploy-public
 bucket.region=US_EAST_1
 
 # Set to false if you want to not use keycloak
