--- a/envcfg/osmre-dev/uasdm/app.properties
+++ b/envcfg/osmre-dev/uasdm/app.properties
@@ -5,7 +5,11 @@ chunk.expire.time=1
 s3.accessKey=changeit
 s3.secretKey=changeit
 bucket.name=osmre-uas-dev
+bucket.public.name=osmre-uas-dev-public
 bucket.region=US_EAST_1
+
+# Titiler services
+titiler.public.url=https://k67ob0ncba.execute-api.us-east-1.amazonaws.com
 
 # url of the solr service
 solr.enabled=false
