--- a/envcfg/staging/uasdm/app.properties
+++ b/envcfg/staging/uasdm/app.properties
@@ -4,6 +4,7 @@ chunk.expire.time=1
 s3.accessKey=changeit
 s3.secretKey=changeit
 bucket.name=osmre-uas-staging
+bucket.public.name=osmre-uas-staging-public
 bucket.region=US_EAST_1
 
 # url of the solr service
