CogGeoTiff integration with TiTiler service.

--- a/envcfg/dev-deploy/uasdm/app.properties
+++ b/envcfg/dev-deploy/uasdm/app.properties
@@ -6,7 +6,11 @@ s3.accessKey=changeit
 s3.secretKey=changeit
 bucket.name=osmre-uas-dev-deploy
 bucket.public.name=osmre-uas-dev-deploy-public
-bucket.region=US_EAST_1
+bucket.region=us-east-1
+
+# Titiler services
+titiler.public.url=https://k67ob0ncba.execute-api.us-east-1.amazonaws.com
+titiler.private.url=https://gi8lxq0it0.execute-api.us-east-1.amazonaws.com
 
 # Set to false if you want to not use keycloak
 keycloak.enabled=true
