--- a/envcfg/osmre-dev/uasdm/app.properties
+++ b/envcfg/osmre-dev/uasdm/app.properties
@@ -6,10 +6,11 @@ s3.accessKey=changeit
 s3.secretKey=changeit
 bucket.name=osmre-uas-dev
 bucket.public.name=osmre-uas-dev-public
-bucket.region=US_EAST_1
+bucket.region=us-east-1
 
 # Titiler services
 titiler.public.url=https://k67ob0ncba.execute-api.us-east-1.amazonaws.com
+titiler.private.url=https://gi8lxq0it0.execute-api.us-east-1.amazonaws.com
 
 # url of the solr service
 solr.enabled=false
