--- a/envcfg/staging/uasdm/app.properties
+++ b/envcfg/staging/uasdm/app.properties
@@ -1,11 +1,16 @@
 # Number of days before a chunk expires, make sure this value is in sync with the fine uploader property defined in upload.component.ts
 chunk.expire.time=1
 
+# Programmatic only S3 credentials for user  s3-osmre-uas-repo-access
 s3.accessKey=changeit
 s3.secretKey=changeit
 bucket.name=osmre-uas-staging
 bucket.public.name=osmre-uas-staging-public
-bucket.region=US_EAST_1
+bucket.region=us-east-1
+
+# Titiler services
+titiler.public.url=https://k67ob0ncba.execute-api.us-east-1.amazonaws.com
+titiler.private.url=https://gi8lxq0it0.execute-api.us-east-1.amazonaws.com
 
 # url of the solr service
 solr.enabled=true
