Added urls for different TiTiler deployments for dev/staging/prod.

--- a/envcfg/dev-deploy/uasdm/app.properties
+++ b/envcfg/dev-deploy/uasdm/app.properties
@@ -9,8 +9,8 @@ bucket.public.name=osmre-uas-dev-deploy-public
 bucket.region=us-east-1
 
 # Titiler services
-titiler.public.url=https://k67ob0ncba.execute-api.us-east-1.amazonaws.com
-titiler.private.url=https://gi8lxq0it0.execute-api.us-east-1.amazonaws.com
+titiler.public.url=https://qeht05afm9.execute-api.us-east-1.amazonaws.com
+titiler.private.url=https://tpn04elw9l.execute-api.us-east-1.amazonaws.com
 
 # Set to false if you want to not use keycloak
 keycloak.enabled=true
