--- a/uasdm-server/pom.xml
+++ b/uasdm-server/pom.xml
@@ -116,6 +116,7 @@
 	  <artifactId>aws-java-sdk</artifactId>
 	  <version>1.12.220</version>
 	</dependency>
+	<!-- SOLR Dependencies -->
     <dependency>
       <groupId>org.apache.solr</groupId>
       <artifactId>solr-solrj</artifactId>
@@ -127,6 +128,29 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <!-- Elastic search dependencies-->
+    <dependency>
+      <groupId>co.elastic.clients</groupId>
+      <artifactId>elasticsearch-java</artifactId>
+      <version>8.3.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.12.3</version>
+    </dependency>    
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.12.3</version>
+    </dependency>    
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.12.3</version>
+    </dependency>    
+    <!-- TIKA dependencies-->
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
