--- a/uasdm-test/pom.xml
+++ b/uasdm-test/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>gov.osmre.uasdm</groupId>
     <artifactId>uasdm</artifactId>
-    <version>0.14.9-SNAPSHOT</version>
+    <version>0.15.0-SNAPSHOT</version>
   </parent>
   <artifactId>uasdm-test</artifactId>
   <packaging>war</packaging>
@@ -332,6 +332,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>2.4</version>
         <configuration>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
           <packagingExcludes>
             <!-- Exclude all jars provided by tomcat -->
             **/catalina*.jar,
