--- a/uasdm-web/pom.xml
+++ b/uasdm-web/pom.xml
@@ -274,6 +274,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>2.4</version>
         <configuration>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
           <warSourceExcludes>**/prism.jsp,**/admin.jsp,**/index.jsp</warSourceExcludes>
           <packagingExcludes>
             <!-- Exclude all jars provided by tomcat -->
