--- a/envcfg/staging/uasdm/app.properties
+++ b/envcfg/staging/uasdm/app.properties
@@ -9,8 +9,7 @@ bucket.public.name=osmre-uas-staging-public
 bucket.region=us-east-1
 
 # Titiler services
-titiler.public.url=https://taj0ctgqbc.execute-api.us-east-1.amazonaws.com
-titiler.private.url=https://c9987ywlna.execute-api.us-east-1.amazonaws.com
+titiler.url=https://c9987ywlna.execute-api.us-east-1.amazonaws.com
 
 # url of the solr service
 solr.enabled=true
