--- a/envcfg/osmre-dev/uasdm/app.properties
+++ b/envcfg/osmre-dev/uasdm/app.properties
@@ -9,8 +9,7 @@ bucket.public.name=osmre-uas-dev-public
 bucket.region=us-east-1
 
 # Titiler services
-titiler.public.url=https://k67ob0ncba.execute-api.us-east-1.amazonaws.com
-titiler.private.url=https://gi8lxq0it0.execute-api.us-east-1.amazonaws.com
+titiler.url=https://gi8lxq0it0.execute-api.us-east-1.amazonaws.com
 
 # url of the solr service
 solr.enabled=false
