--- a/envcfg/prod/uasdm/app.properties
+++ b/envcfg/prod/uasdm/app.properties
@@ -9,8 +9,7 @@ bucket.public.name=osmre-uas-prod-public
 bucket.region=us-east-1
 
 # Titiler services
-titiler.public.url=https://uqkug556n3.execute-api.us-east-1.amazonaws.com
-titiler.private.url=https://gbl7jdx1jh.execute-api.us-east-1.amazonaws.com
+titiler.url=https://gbl7jdx1jh.execute-api.us-east-1.amazonaws.com
 
 # url of the solr service
 solr.enabled=true
