--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -43,6 +43,7 @@
 		"proj4": "2.6.0",
 		"rxjs": "6.5.4",
 		"tslib": "^1.11.1",
+		"@turf/turf": "^5.1.6",
 		"web-animations-js": "2.3.2",
 		"zone.js": "0.10.3"
 	},
