Fix issue where python validator would prevent ortho uploading on dev boxes.

--- a/envcfg/osmre-dev/uasdm/app.properties
+++ b/envcfg/osmre-dev/uasdm/app.properties
@@ -10,6 +10,7 @@ bucket.region=us-east-1
 
 # Titiler services
 titiler.url=https://gi8lxq0it0.execute-api.us-east-1.amazonaws.com
+cog.validator.cmd=["/bin/sh", "-c", "echo \\"{cog_file}\\" | grep \\"^.*\.cog\.tif$\\""]
 
 # url of the solr service
 solr.url=http://localhost:8983/solr/uasdm
