Increment report download count when viewing cog orthos.

--- a/uasdm-server/pom.xml
+++ b/uasdm-server/pom.xml
@@ -38,6 +38,24 @@
 
   <repositories>
     <repository>
+      <id>central</id>
+      <name>central</name>
+      <url> https://repo1.maven.org/maven2/</url>
+      <layout>default</layout>
+    </repository>    
+    <repository>
+      <id>terraframe-public</id>
+      <url>https://dl.cloudsmith.io/public/terraframe/public/maven/</url>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>always</updatePolicy>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+        <updatePolicy>always</updatePolicy>
+      </snapshots>
+    </repository>
+    <repository>
       <id>GeoSolutions</id>
       <name>GeoSolutions</name>
       <url>https://maven.geo-solutions.it/</url>
