--- a/uasdm-server/pom.xml
+++ b/uasdm-server/pom.xml
@@ -174,6 +174,16 @@
       <groupId>org.apache.solr</groupId>
       <artifactId>solr-solrj</artifactId>
       <version>8.7.0</version>
+      <exclusions>
+      	<exclusion>
+      		<groupId>org.apache.zookeeper</groupId>
+      		<artifactId>zookeeper</artifactId>
+      	</exclusion>
+      	<exclusion>
+      		<groupId>org.apache.zookeeper</groupId>
+      		<artifactId>zookeeper-jute</artifactId>
+      	</exclusion>
+      </exclusions>
     </dependency>
     <!-- Elastic search dependencies-->
     <dependency>
@@ -221,30 +231,6 @@
       <version>3.3.6</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
-    <dependency>
-      <groupId>org.apache.zookeeper</groupId>
-      <artifactId>zookeeper</artifactId>
-      <version>3.8.0</version>
-      <type>pom</type>
-      <exclusions>
-        <exclusion>
-          <groupId>log4j</groupId>
-          <artifactId>log4j</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>ch.qos.logback</groupId>
-          <artifactId>logback-core</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>ch.qos.logback</groupId>
-          <artifactId>logback-classic</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
