--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -4,7 +4,8 @@
 	"scripts": {
 		"start": "webpack-dev-server --https --inline --progress --port 8080",
 		"test": "karma start",
-		"build": "rimraf dist && webpack --config config/webpack.prod.js --profile"
+		"build": "rimraf dist && webpack --config config/webpack.prod.js --profile",
+		"prepare": "cd ../../../../ && husky install uasdm-web/src/main/ng2/.husky"
 	},
 	"dependencies": {
 		"@angular/animations": "9.1.0",
@@ -50,6 +51,8 @@
 	"devDependencies": {
 		"@angular/compiler": "~9.1.0",
 		"@angular/compiler-cli": "~9.1.0",
+		"@commitlint/cli": "^17.0.3",
+		"@commitlint/config-conventional": "^17.0.3",
 		"@ngtools/webpack": "^9.1.0",
 		"@types/jasmine": "3.5.10",
 		"@types/node": "^13.9.5",
@@ -57,6 +60,7 @@
 		"file-loader": "6.0.0",
 		"html-loader": "^1.0.0",
 		"html-webpack-plugin": "^4.0.2",
+		"husky": "^8.0.1",
 		"node-sass": "4.13.1",
 		"null-loader": "^3.0.0",
 		"raw-loader": "^4.0.0",
