--- a/uasdm-server/pom.xml
+++ b/uasdm-server/pom.xml
@@ -109,8 +109,13 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.5.13</version>
+      <version>4.5.14</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient-cache</artifactId>
+      <version>4.5.14</version>
+	</dependency>
     <!-- https://mvnrepository.com/artifact/net.lingala.zip4j/zip4j -->
     <dependency>
       <groupId>net.lingala.zip4j</groupId>
