--- a/uasdm-web/src/main/webapp/WEB-INF/web.xml
+++ b/uasdm-web/src/main/webapp/WEB-INF/web.xml
@@ -29,36 +29,6 @@
     <extension>xsd</extension>
     <mime-type>text/xml</mime-type>
   </mime-mapping>
-  <servlet>
-    <servlet-name>JavascriptServlet</servlet-name>
-    <servlet-class>net.jawr.web.servlet.JawrServlet</servlet-class>
-    <init-param>
-      <param-name>configLocation</param-name>
-      <param-value>/jawr.properties</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet>
-    <servlet-name>CSSServlet</servlet-name>
-    <servlet-class>net.jawr.web.servlet.JawrServlet</servlet-class>
-    <init-param>
-      <param-name>configLocation</param-name>
-      <param-value>/jawr.properties</param-value>
-    </init-param>
-    <init-param>
-      <param-name>type</param-name>
-      <param-value>css</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>JavascriptServlet</servlet-name>
-    <url-pattern>*.js</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>CSSServlet</servlet-name>
-    <url-pattern>*.css</url-pattern>
-  </servlet-mapping>
   <filter>
     <filter-name>EncodingFilter</filter-name>
     <filter-class>net.geoprism.EncodingFilter</filter-class>
@@ -95,19 +65,15 @@
   <listener>
     <listener-class>net.geoprism.GeoprismContextListener</listener-class>
   </listener>
-  <error-page>
-    <exception-type>java.lang.Exception</exception-type>
-    <location>/net/geoprism/error.jsp</location>
-  </error-page>
-  <error-page>
-    <exception-type>com.runwaysdk.session.InvalidSessionExceptionDTO</exception-type>
-    <location>/net/geoprism/login/login.jsp</location>
-  </error-page>
   
   
   <filter>
 	  <filter-name>CorsFilter</filter-name>
 	  <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+    <init-param>
+      <param-name>cors.allowed.origins</param-name>
+      <param-value>https://localhost:4200</param-value>
+    </init-param>    
 	</filter>
 	<filter-mapping>
 	  <filter-name>CorsFilter</filter-name>
