chore: hooked up the ui front-end compiling to the maven build lifecycle

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 
   <modules>
     <module>uasdm-server</module>
+    <module>uasdm-ui</module>    
     <module>uasdm-web</module>
   </modules>
 
