chore: support for geoprism featuresets

--- a/envcfg/dev-deploy/geoprism/geoprism.properties
+++ b/envcfg/dev-deploy/geoprism/geoprism.properties
@@ -1,13 +1,15 @@
-email.to=
-email.from=noreply@geoprism.net
-email.server=email-smtp.us-west-2.amazonaws.com
-email.username=changeit
-email.password=changeit
-email.port=587
-email.encrypted=true
+geoprism.remote.url=https://dev-idm.geoprism.net/
+
+geoprism.email.to=
+geoprism.email.from=noreply@geoprism.net
+geoprism.email.server=email-smtp.us-west-2.amazonaws.com
+geoprism.email.username=changeit
+geoprism.email.password=changeit
+geoprism.email.port=587
+geoprism.email.encrypted=true
 
 # The amount of elapsed time in which to expire a forgot password request, in hours.
-forgotPassword.expireTime=2
-solr.lookup=false
+geoprism.forgotPassword.expireTime=2
+geoprism.solr.lookup=false
 
 geoprism.volume=/data/geoprism/misc
