--- a/envcfg/envcfg-example.properties
+++ b/envcfg/envcfg-example.properties
@@ -8,8 +8,8 @@ appcfg=osmre-dev
 #mapboxgl.accessToken=changeit
 #s3.accessKey=changeit
 #s3.secretKey=changeit
-#email.username=changeit
-#email.password=changeit
+#geoprism.email.username=changeit
+#geoprism.email.password=changeit
 #geoserver.admin.user=admin
 #geoserver.admin.password=changeit
 #eros.ecs.accessKey=changeit
