--- a/uasdm-ui/tsconfig.json
+++ b/uasdm-ui/tsconfig.json
@@ -29,7 +29,8 @@
       "@admin/*": [
         "src/app/admin/*"
       ]
-    }
+    },
+    "esModuleInterop": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
