--- a/uasdm-web/pom.xml
+++ b/uasdm-web/pom.xml
@@ -118,6 +118,7 @@
               <configuration>
                 <properties>
                   <cargo.servlet.port>8443</cargo.servlet.port>
+                  <cargo.rmi.port>10099</cargo.rmi.port>
                   <cargo.protocol>https</cargo.protocol>
                   <cargo.tomcat.connector.clientAuth>false</cargo.tomcat.connector.clientAuth>
                   <cargo.tomcat.connector.sslProtocol>TLS</cargo.tomcat.connector.sslProtocol>
@@ -139,6 +140,7 @@
                     -Denvcfg=${project.basedir}/../envcfg
                     -Dproject.basedir=${project.basedir}
                     -Dcom.sun.jndi.ldap.object.disableEndpointIdentification=true
+                    -Dnetwork.binary.maxLength=56384                    
                   </cargo.jvmargs>
                 </properties>
               </configuration>
