--- a/uasdm-ui/package.json
+++ b/uasdm-ui/package.json
@@ -11,14 +11,14 @@
 		"prepare": "cd ../ && husky install uasdm-ui/.husky"
 	},
 	"dependencies": {
-		"@angular/animations": "^15.0.0",
-		"@angular/common": "^15.0.0",
-		"@angular/compiler": "^15.0.0",
-		"@angular/core": "^15.0.0",
-		"@angular/forms": "^15.0.0",
-		"@angular/platform-browser": "^15.0.0",
-		"@angular/platform-browser-dynamic": "^15.0.0",
-		"@angular/router": "^15.0.0",
+		"@angular/animations": "^15.2.9",
+		"@angular/common": "^15.2.9",
+		"@angular/compiler": "^15.2.9",
+		"@angular/core": "^15.2.9",
+		"@angular/forms": "^15.2.9",
+		"@angular/platform-browser": "^15.2.9",
+		"@angular/platform-browser-dynamic": "^15.2.9",
+		"@angular/router": "^15.2.9",
 		"@fortawesome/fontawesome-free": "^5.13.0",
 		"@mapbox/mapbox-gl-draw": "1.3.0",
 		"@mapbox/mapbox-gl-draw-static-mode": "1.0.1",
@@ -38,12 +38,11 @@
 		"mapbox-gl": "1.13.2",
 		"ng2-file-upload": "1.4.0",
 		"ngx-bootstrap": "5.6.1",
-		"ngx-cookie-service": "3.0.3",
+		"ngx-cookie-service": "15.0.0",
 		"ngx-file-drop": "^14.0.2",
 		"ngx-pagination": "5.0.0",
-		"ngx-spinner": "^11.0.2",
 		"primeicons": "^6.0.1",
-		"primeng": "^14.2.3",
+		"primeng": "^15.4.1",
 		"proj4": "2.6.0",
 		"rxjs": "~7.5.0",
 		"tslib": "^2.3.0",
@@ -52,12 +51,13 @@
 		"zone.js": "~0.12.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^15.0.4",
-		"@angular/cli": "~15.0.4",
-		"@angular/compiler-cli": "^15.0.0",
+		"@angular-devkit/build-angular": "^15.2.9",
+		"@angular/cli": "^15.2.9",
+		"@angular/compiler-cli": "^15.2.9",
 		"@commitlint/cli": "^17.0.3",
 		"@commitlint/config-conventional": "^17.0.3",
 		"@types/jasmine": "~4.3.0",
+		"@types/node": "^20.4.0",
 		"eslint": "^7.31.0",
 		"husky": "^8.0.1",
 		"jasmine-core": "~4.5.0",
