chore(keycloak): flag for disabling idm user management

--- a/envcfg/dev-deploy/uasdm/app.properties
+++ b/envcfg/dev-deploy/uasdm/app.properties
@@ -11,8 +11,9 @@ bucket.region=us-east-1
 # Titiler services
 titiler.url=https://tpn04elw9l.execute-api.us-east-1.amazonaws.com
 
-# Set to false if you want to not use keycloak
+# Keycloak OAuth services
 keycloak.enabled=true
+keycloak.requireKeycloakLogin=true
 
 # url of the solr service
 solr.url=http://localhost:8983/solr/uasdm
