--- a/envcfg/staging/uasdm/app.properties
+++ b/envcfg/staging/uasdm/app.properties
@@ -11,6 +11,10 @@ bucket.region=us-east-1
 # Titiler services
 titiler.url=https://c9987ywlna.execute-api.us-east-1.amazonaws.com
 
+# Keycloak OAuth services
+keycloak.enabled=true
+keycloak.requireKeycloakLogin=true
+
 # url of the solr service
 solr.url=http://localhost:8983/solr/uasdm
 
