--- a/envcfg/prod/uasdm/app.properties
+++ b/envcfg/prod/uasdm/app.properties
@@ -11,6 +11,10 @@ bucket.region=us-east-1
 # Titiler services
 titiler.url=https://gbl7jdx1jh.execute-api.us-east-1.amazonaws.com
 
+# Keycloak OAuth services
+keycloak.enabled=true
+keycloak.requireKeycloakLogin=true
+
 # url of the solr service
 solr.url=http://localhost:8983/solr/uasdm
 
