--- a/uasdm-ui/package.json
+++ b/uasdm-ui/package.json
@@ -19,10 +19,12 @@
 		"@angular/platform-browser": "^15.2.9",
 		"@angular/platform-browser-dynamic": "^15.2.9",
 		"@angular/router": "^15.2.9",
+		"@circlon/angular-tree-component": "^11.0.4",
 		"@fortawesome/fontawesome-free": "^5.13.0",
 		"@mapbox/mapbox-gl-draw": "1.3.0",
 		"@mapbox/mapbox-gl-draw-static-mode": "1.0.1",
 		"@mapbox/mapbox-sdk": "0.13.5",
+		"@perfectmemory/ngx-contextmenu": "15.1.1",
 		"@turf/turf": "^5.1.6",
 		"@types/file-saver": "2.0.1",
 		"@types/geojson": "7946.0.7",
