chore(keycloak): change default dev properties to require keycloak login

--- a/envcfg/osmre-dev/uasdm/app.properties
+++ b/envcfg/osmre-dev/uasdm/app.properties
@@ -12,6 +12,11 @@ bucket.region=us-east-1
 titiler.url=https://gi8lxq0it0.execute-api.us-east-1.amazonaws.com
 cog.validator.cmd=
 
+# Keycloak OAuth services
+keycloak.enabled=true
+keycloak.requireKeycloakLogin=true
+keycloak.ng2dev=true
+
 # url of the solr service
 solr.url=http://localhost:8983/solr/uasdm
 
