fix(site-viewer): elevation not rendering on map explorer (refs #286)

--- a/envcfg/dev-deploy/uasdm/app.properties
+++ b/envcfg/dev-deploy/uasdm/app.properties
@@ -9,7 +9,7 @@ bucket.public.name=osmre-uas-dev-deploy-public
 bucket.region=us-east-1
 
 # Titiler services
-titiler.url=https://tpn04elw9l.execute-api.us-east-1.amazonaws.com
+titiler.url=https://e4j4wn467etogqa5nsjs4n56ta0hrizy.lambda-url.us-east-1.on.aws
 
 # Keycloak OAuth services
 keycloak.enabled=true
