--- a/envcfg/staging/uasdm/app.properties
+++ b/envcfg/staging/uasdm/app.properties
@@ -9,7 +9,7 @@ bucket.public.name=osmre-uas-staging-public
 bucket.region=us-east-1
 
 # Titiler services
-titiler.url=https://c9987ywlna.execute-api.us-east-1.amazonaws.com
+titiler.url=https://hhemovvps2b3n4azxjwqirquku0ptito.lambda-url.us-east-1.on.aws
 
 # Keycloak OAuth services
 keycloak.enabled=true
