--- a/envcfg/osmre-dev/uasdm/app.properties
+++ b/envcfg/osmre-dev/uasdm/app.properties
@@ -9,7 +9,7 @@ bucket.public.name=osmre-uas-dev-public
 bucket.region=us-east-1
 
 # Titiler services
-titiler.url=https://gi8lxq0it0.execute-api.us-east-1.amazonaws.com
+titiler.url=https://l7vpagmdethnjyr466uzftnlny0iyenm.lambda-url.us-east-1.on.aws
 cog.validator.cmd=
 
 # Keycloak OAuth services
