--- a/envcfg/prod/uasdm/app.properties
+++ b/envcfg/prod/uasdm/app.properties
@@ -9,7 +9,7 @@ bucket.public.name=osmre-uas-prod-public
 bucket.region=us-east-1
 
 # Titiler services
-titiler.url=https://gbl7jdx1jh.execute-api.us-east-1.amazonaws.com
+titiler.url=https://vqt5pxzkdsu7qfivchuyjqvg5q0edosh.lambda-url.us-east-1.on.aws
 
 # Keycloak OAuth services
 keycloak.enabled=true
