--- a/uasdm-test/pom.xml
+++ b/uasdm-test/pom.xml
@@ -21,10 +21,10 @@
   <parent>
     <groupId>gov.osmre.uasdm</groupId>
     <artifactId>uasdm</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.2.1-SNAPSHOT</version>
   </parent>
   <artifactId>uasdm-test</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>uasdm Test</name>
 
