chore: initial docker build scripts for uasdm-clusterlidar

--- a/uasdm-clusterlidar/Dockerfile
+++ b/uasdm-clusterlidar/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM daskdev/dask@sha256:6a66c4a42ed84bb2fa4866876a7b59f8e355d434e63682d2ccb0295938fbccbd
 
 ENV PATH="/root/miniconda3/bin:${PATH}"
 ARG PATH="/root/miniconda3/bin:${PATH}"
@@ -26,22 +26,30 @@ RUN arch=$(uname -m) && \
 
 RUN conda --version
 
-COPY . /opt/uasdm-clusterlidar
+WORKDIR /opt/uasdm-clusterlidar
 
-WORKDIR /opt/uasdm-clusterlidar/silvimetric
+COPY environment.yml /opt/uasdm-clusterlidar/environment.yml
 
 RUN conda env create \
-    -f https://raw.githubusercontent.com/hobuinc/silvimetric/main/environment.yml  \
-    -n silvimetric
+     -f environment.yml  \
+     -n silvimetric
 
 SHELL ["conda", "run", "-n", "silvimetric", "/bin/bash", "-c"]
 
-WORKDIR /opt/uasdm-clusterlidar/silvimetric
-
-RUN pip install .
-
 RUN conda install -c conda-forge dask-cloudprovider
+RUN conda install -c conda-forge boto3
+RUN conda install -c conda-forge silvimetric
 
-RUN silvimetric -d autzen initialize --bounds '{"maxx":639003.73,"maxy":853536.21,"maxz":615.26,"minx":635579.2,"miny":848884.83,"minz":406.46}' --crs EPSG:2992
+##RUN pip install dask-cloudprovider boto3 silvimetric PDAL tiledb numpy shapely dask pyproj GDAL scipy awscli websocket-client python-json-logger dill pandas lmoments3
 
-ENTRYPOINT ["conda", "run", "-n", "silvimetric", "/bin/bash", "-c", "silvimetric", "-d", "autzen", "--scheduler", "distributed", "--dasktype", "ec2", "--threads", "4", "--workers", "4", "--watch", "shatter", "--date", "2018-12-01","autzen.copc.lazvim"]
+COPY . /opt/uasdm-clusterlidar
+
+##RUN silvimetric -d autzen initialize --bounds '{"maxx":639003.73,"maxy":853536.21,"maxz":615.26,"minx":635579.2,"miny":848884.83,"minz":406.46}' --crs EPSG:2992
+
+##ENTRYPOINT ["conda", "run", "-n", "silvimetric", "/bin/bash", "-c", "silvimetric", "-d", "autzen", "--scheduler", "distributed", "--dasktype", "ec2", "--threads", "4", "--workers", "4", "--watch", "shatter", "--date", "2018-12-01","autzen.copc.lazvim"]
+
+ENTRYPOINT ["conda", "run", "-n", "silvimetric", "/bin/bash", "-c"]
+
+CMD ["python autoscale.py"]
+
+##ENTRYPOINT ["python", "autoscale.py"]
