--- a/uasdm-clusterlidar/Dockerfile
+++ b/uasdm-clusterlidar/Dockerfile
@@ -1,44 +1,17 @@
-FROM daskdev/dask@sha256:6a66c4a42ed84bb2fa4866876a7b59f8e355d434e63682d2ccb0295938fbccbd
-
-ENV PATH="/root/miniconda3/bin:${PATH}"
-ARG PATH="/root/miniconda3/bin:${PATH}"
-
-# Install wget to fetch Miniconda
-RUN apt-get update && \
-    apt-get install -y wget && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
-# Install Miniconda on x86 or ARM platforms
-RUN arch=$(uname -m) && \
-    if [ "$arch" = "x86_64" ]; then \
-    MINICONDA_URL="https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh"; \
-    elif [ "$arch" = "aarch64" ]; then \
-    MINICONDA_URL="https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-aarch64.sh"; \
-    else \
-    echo "Unsupported architecture: $arch"; \
-    exit 1; \
-    fi && \
-    wget $MINICONDA_URL -O miniconda.sh && \
-    mkdir -p /root/.conda && \
-    bash miniconda.sh -b -p /root/miniconda3 && \
-    rm -f miniconda.sh
-
-RUN conda --version
+FROM daskdev/dask:latest
 
 WORKDIR /opt/uasdm-clusterlidar
 
 COPY environment.yml /opt/uasdm-clusterlidar/environment.yml
 
-RUN conda env create \
-     -f environment.yml  \
-     -n silvimetric
+RUN mamba create -c conda-forge \
+     -n silvimetric && mamba env update -n silvimetric --file environment.yml
 
-SHELL ["conda", "run", "-n", "silvimetric", "/bin/bash", "-c"]
+SHELL ["mamba", "run", "-n", "silvimetric", "/bin/bash", "-c"]
 
-RUN conda install -c conda-forge dask-cloudprovider
-RUN conda install -c conda-forge boto3
-RUN conda install -c conda-forge silvimetric
+RUN mamba install -c conda-forge dask-cloudprovider
+RUN mamba install -c conda-forge boto3
+RUN mamba install -c conda-forge silvimetric
 
 ##RUN pip install dask-cloudprovider boto3 silvimetric PDAL tiledb numpy shapely dask pyproj GDAL scipy awscli websocket-client python-json-logger dill pandas lmoments3
 
