chore: initial support for allowing lidar uploads + change to maplibre

--- a/uasdm-ui/tsconfig.json
+++ b/uasdm-ui/tsconfig.json
@@ -29,7 +29,8 @@
       "@admin/*": [
         "src/app/admin/*"
       ]
-    }
+    },
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
