--- a/uasdm-ui/package.json
+++ b/uasdm-ui/package.json
@@ -29,7 +29,6 @@
 		"@types/file-saver": "2.0.1",
 		"@types/geojson": "7946.0.7",
 		"@types/google-libphonenumber": "^7.4.17",
-		"@types/mapbox-gl": "1.11.1",
 		"@types/proj4": "2.5.0",
 		"@types/uuid": "8.0.0",
 		"angular-animations": "0.0.10",
@@ -37,7 +36,8 @@
 		"file-saver": "2.0.2",
 		"fine-uploader": "5.16.2",
 		"google-libphonenumber": "^3.2.8",
-		"mapbox-gl": "1.13.2",
+		"maplibre-gl": "^2.4.0",
+		"maplibregl-mapbox-request-transformer": "^0.0.2",
 		"ng2-file-upload": "1.4.0",
 		"ngx-bootstrap": "5.6.1",
 		"ngx-cookie-service": "15.0.0",
