--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,13 @@
   </modules>
 
   <properties>
-    <geoprism.version>1.1.11</geoprism.version>
+    <geoprism.version>1.1.12-SNAPSHOT</geoprism.version>
   
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-    <aspectj.version>1.9.7</aspectj.version>    
-    <aspectj.plugin.version>1.13.1</aspectj.plugin.version>    
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <aspectj.version>1.9.22.1</aspectj.version>    
+    <aspectj.plugin.version>1.15.0</aspectj.plugin.version>
 
     <geotools.version>16.1</geotools.version>    
   </properties>
