--- a/uasdm-server/pom.xml
+++ b/uasdm-server/pom.xml
@@ -121,7 +121,7 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.9</version>
+      <version>2.11.0</version>
     </dependency>
     
     <dependency>
@@ -539,7 +539,7 @@
     <plugins>
       <!-- Weave Aspects -->
       <plugin>
-        <groupId>dev.aspectj</groupId>
+        <groupId>org.codehaus.mojo</groupId>
         <artifactId>aspectj-maven-plugin</artifactId>
         <version>${aspectj.plugin.version}</version>
         <dependencies>
