--- a/uasdm-test/pom.xml
+++ b/uasdm-test/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>gov.osmre.uasdm</groupId>
     <artifactId>uasdm</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.3.1-SNAPSHOT</version>
   </parent>
   <artifactId>uasdm-test</artifactId>
   <packaging>jar</packaging>
@@ -305,7 +305,7 @@
       </plugin>
       <!-- Weave Aspects -->
       <plugin>
-        <groupId>dev.aspectj</groupId>
+        <groupId>org.codehaus.mojo</groupId>
         <artifactId>aspectj-maven-plugin</artifactId>
         <version>${aspectj.plugin.version}</version>
         <dependencies>
