--- a/uasdm-web/pom.xml
+++ b/uasdm-web/pom.xml
@@ -231,7 +231,7 @@
       </plugin>      
       <!-- Weave Aspects -->
       <plugin>
-        <groupId>dev.aspectj</groupId>
+        <groupId>org.codehaus.mojo</groupId>
         <artifactId>aspectj-maven-plugin</artifactId>
         <version>${aspectj.plugin.version}</version>
         <dependencies>
@@ -267,7 +267,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>3.3.2</version>
+        <version>3.4.0</version>
         <configuration>
           <warSourceExcludes>**/prism.jsp,**/admin.jsp,**/index.jsp</warSourceExcludes>
           <packagingExcludes>
