chore: java 17 tomcat 11 and jakarta servlet

--- a/uasdm-web/pom.xml
+++ b/uasdm-web/pom.xml
@@ -71,18 +71,15 @@
     </dependency>
 -->    
     <dependency>
-      <groupId>javax.servlet.jsp</groupId>
-      <artifactId>jsp-api</artifactId>
-      <version>2.1</version>
-      <scope>provided</scope> <!-- This dependency is NOT transitive because scope=provided -->
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
-    </dependency>
-
+	    <groupId>jakarta.servlet.jsp.jstl</groupId>
+	    <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+	    <version>3.0.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.glassfish.web</groupId>
+	    <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+	    <version>3.0.1</version>
+	</dependency>
   </dependencies>
 
   <profiles>
@@ -103,15 +100,15 @@
         <plugins>
           <plugin>
             <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven2-plugin</artifactId>
-            <version>1.7.11</version>
+			<artifactId>cargo-maven3-plugin</artifactId>
+			<version>1.10.15</version>
             <configuration>
               <container>
-                <containerId>tomcat8x</containerId>
+                <containerId>tomcat11x</containerId>
                 <artifactInstaller>
                   <groupId>org.apache.tomcat</groupId>
                   <artifactId>tomcat</artifactId>
-                  <version>8.5.53</version>
+                  <version>11.0.0</version>
                 </artifactInstaller>
                 <timeout>4800000</timeout>
               </container>
@@ -262,6 +259,7 @@
           <fork>true</fork>
           <meminitial>512m</meminitial>
           <maxmem>1024m</maxmem>
+          <parameters>true</parameters>
         </configuration>
       </plugin>
       <plugin>
