feat: switch from fine uploader to tus for basic collection upload

--- a/uasdm-ui/angular.json
+++ b/uasdm-ui/angular.json
@@ -68,15 +68,15 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "uasdm:build:production"
+              "buildTarget": "uasdm:build:production"
             },
             "development": {
-              "browserTarget": "uasdm:build:development"
+              "buildTarget": "uasdm:build:development"
             }
           },
           "defaultConfiguration": "development",
           "options": {
-            "browserTarget": "your-application-name:build",
+            "buildTarget": "your-application-name:build",
             "ssl": true,
             "proxyConfig": "src/proxy.conf.js"
           }
@@ -84,7 +84,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "uasdm:build"
+            "buildTarget": "uasdm:build"
           }
         },
         "test": {
