--- a/uasdm-web/pom.xml
+++ b/uasdm-web/pom.xml
@@ -150,7 +150,7 @@
                   <artifactId>uasdm-web</artifactId>
                   <type>war</type>
                   <properties>
-                    <context>uasdm</context>
+                    <context>ROOT</context>
                   </properties>
                 </deployable>
 <!--
