--- a/uasdm-ui/package.json
+++ b/uasdm-ui/package.json
@@ -12,19 +12,20 @@
 	},
 	"dependencies": {
 		"@ali-hm/angular-tree-component": "^17.0.1",
-		"@angular/animations": "^18.2.14",
-		"@angular/common": "^18.2.14",
-		"@angular/compiler": "^18.2.14",
-		"@angular/core": "^18.2.14",
-		"@angular/forms": "^18.2.14",
-		"@angular/platform-browser": "^18.2.14",
-		"@angular/platform-browser-dynamic": "^18.2.14",
-		"@angular/router": "^18.2.14",
+		"@angular/animations": "^19.2.18",
+		"@angular/common": "^19.2.18",
+		"@angular/compiler": "^19.2.18",
+		"@angular/core": "^19.2.18",
+		"@angular/forms": "^19.2.18",
+		"@angular/platform-browser": "^19.2.18",
+		"@angular/platform-browser-dynamic": "^19.2.18",
+		"@angular/router": "^19.2.18",
 		"@fortawesome/fontawesome-free": "^6.5.2",
 		"@mapbox/mapbox-gl-draw": "1.3.0",
 		"@mapbox/mapbox-gl-draw-static-mode": "1.0.1",
 		"@mapbox/mapbox-sdk": "0.13.5",
-		"@perfectmemory/ngx-contextmenu": "18.0.0",
+		"@perfectmemory/ngx-contextmenu": "19.0.0",
+		"@primeuix/themes": "^2.0.3",
 		"@turf/turf": "^5.1.6",
 		"@types/file-saver": "2.0.1",
 		"@types/geojson": "7946.0.7",
@@ -38,25 +39,25 @@
 		"google-libphonenumber": "^3.2.43",
 		"maplibre-gl": "^2.4.0",
 		"maplibregl-mapbox-request-transformer": "^0.0.2",
-		"ng2-file-upload": "7.0.1",
-		"ngx-bootstrap": "^18.1.3",
-		"ngx-cookie-service": "18.0.0",
+		"ng2-file-upload": "8.0.0",
+		"ngx-bootstrap": "^19.0.2",
+		"ngx-cookie-service": "19.1.2",
 		"ngx-file-drop": "^14.0.2",
 		"ngx-pagination": "6.0.3",
 		"primeicons": "^6.0.1",
-		"primeng": "^17.18.15",
+		"primeng": "^19.1.4",
 		"proj4": "2.6.0",
 		"rxjs": "~7.8.1",
 		"tslib": "^2.3.0",
 		"tus-js-client": "^4.3.1",
 		"uuid": "^9.0.0",
 		"web-animations-js": "2.3.2",
-		"zone.js": "~0.14.0"
+		"zone.js": "~0.15.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^18.2.21",
-		"@angular/cli": "^18.2.14",
-		"@angular/compiler-cli": "^18.2.14",
+		"@angular-devkit/build-angular": "^19.2.19",
+		"@angular/cli": "^19.2.18",
+		"@angular/compiler-cli": "^19.2.18",
 		"@commitlint/cli": "^17.0.3",
 		"@commitlint/config-conventional": "^17.0.3",
 		"@types/jasmine": "~4.3.0",
@@ -69,6 +70,6 @@
 		"karma-coverage": "~2.2.0",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.0.0",
-		"typescript": "~5.4"
+		"typescript": "~5.8"
 	}
 }
