chore: add enable keycloak example to envcfg-example.properties

--- a/envcfg/envcfg-example.properties
+++ b/envcfg/envcfg-example.properties
@@ -4,6 +4,11 @@ appcfg=osmre-dev
 # Any override properties specific to the current development environment go here (like database.port)
 #database.port=5442
 
+# If you want to use keycloak
+#keycloak.enabled=true
+#keycloak.requireKeycloakLogin=true
+#keycloak.ng2dev=true
+
 # Add Credentials Here
 #mapboxgl.accessToken=changeit
 #s3.accessKey=changeit
