--- a/uasdm-server/pom.xml
+++ b/uasdm-server/pom.xml
@@ -92,9 +92,9 @@
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
-      <version>5.4.3.Final</version>
+      <version>8.0.2.Final</version>
     </dependency>
 	  
     <dependency>
