--- a/uasdm-ui/package.json
+++ b/uasdm-ui/package.json
@@ -24,6 +24,9 @@
 		"@mapbox/mapbox-gl-draw": "1.3.0",
 		"@mapbox/mapbox-gl-draw-static-mode": "1.0.1",
 		"@mapbox/mapbox-sdk": "0.13.5",
+		"@ngrx/component": "^19.2.1",
+		"@ngrx/effects": "^19.2.1",
+		"@ngrx/store": "^19.2.1",	
 		"@perfectmemory/ngx-contextmenu": "19.0.0",
 		"@primeuix/themes": "^2.0.3",
 		"@turf/turf": "^5.1.6",
